--- a/SupermarketOnlineStatic/src/html/templates/index.html
+++ b/SupermarketOnlineStatic/src/html/templates/index.html
@@ -1,8 +1,7 @@
 <div class="index" ng-controller="IndexCtrl">
-  <div class="text-center bg-danger">
-    <span class="h1">网站建设中....</span>
+  <div class="text-center">
+    <a href="/#!/route/page/manage/index">后台管理</a>
   </div>
-
   <div class="div-main">
     <img src="images/2.jpg" class="img-responsive center-block">
   </div>
