--- a/SupermarketOnlineStatic/src/html/templates/manage/main.html
+++ b/SupermarketOnlineStatic/src/html/templates/manage/main.html
@@ -2,9 +2,11 @@
   <div ng-include="'templates/manage/userinfo.html'"></div>
   <div class="main">
     <div class="menu">
-      <span class="btn btn-danger" ng-click="changPage('typemanage');">类型管理</span>
+      <span class="btn" ng-class="{true:'btn-info',false:'btn-danger'}[hashPage=='typemanage.html']" ng-click="changPage('typemanage');">类型管理</span>
       <br>
-      <span class="btn btn-danger" ng-click="changPage('subtypemanage');">小类管理</span>
+      <span class="btn" ng-class="{true:'btn-info',false:'btn-danger'}[hashPage=='subtypemanage.html']" ng-click="changPage('subtypemanage');">小类管理</span>
+      <br>
+      <span class="btn" ng-class="{true:'btn-info',false:'btn-danger'}[hashPage=='configmanage.html']" ng-click="changPage('configmanage');">配置管理</span>
     </div>
     <div class="include">
         <div ng-include="inc"></div>
