--- a/SupermarketOnlineStatic/src/html/templates/manage/subtypemanage.html
+++ b/SupermarketOnlineStatic/src/html/templates/manage/subtypemanage.html
@@ -1,5 +1,5 @@
 <div ng-controller="SubTypeManageCtrl">
-  <div class="text-right bg-primary pd">
+  <div class="text-right bg-info pd">
     <span class="btn btn-danger" ng-click="toAdd();">添加</span>
     <span class="btn btn-danger" ng-click="query();">刷新</span>
   </div>
